# corpus-catalog

./: .gitignore  AGENTS.md  AI.md  CHANGELOG.md  CORPUS.md  README.md  pyproject.toml
scripts/: install-catalog-dev  install-catalog-release
src/ai_spec_catalog/: __init__.py  __main__.py  cli.py  config.py  context.py  corpus.py  identity.py  models.py  projects.py  storage.py  tools.py  validators.py
src/cans_catalog/: __init__.py  cli.py  config.py  context.py  corpus.py  tools.py  validators.py
src/corpus_catalog/: __init__.py  __main__.py  cli.py  config.py  context.py  corpus.py  identity.py  models.py  naming.py  projects.py  release.py  storage.py  tools.py  validators.py
tests/: test_cli.py  test_context.py  test_identity.py  test_models.py  test_release.py  test_storage.py  test_validators.py
tests/fixtures/mini_brief/: AI.md  CORPUS.md
tests/fixtures/mini_brief/ai-spec/: AI-SPEC.md
tests/fixtures/mini_brief/ai-spec/profiles/: initiatives.md
tests/fixtures/mini_brief/corpus-spec/: CORPUS-SPEC.md
tests/fixtures/mini_brief/corpus-spec/profiles/: human-workspace.md  initiatives.md  project.md  reference.md
tests/fixtures/mini_brief/corpus-spec/specs/: corpus-identity.md  profile-composition.md  tooling-and-validation.md
tests/fixtures/mini_brief/projects/demo/: AI.md  CORPUS.md
tests/fixtures/mini_brief/projects/demo/assets/: OVERVIEW.md
tests/fixtures/mini_brief/projects/demo/assets/epics/001-DEMO/: SPIKE.md  TASKS.md
tests/fixtures/mini_brief/projects/demo/assets/epics/001-DEMO/reference/: demo-candidate.md
