[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-spec-catalog"
version = "0.1.0"
description = "AI-SPEC-coupled corpus catalog CLI and context packet builder."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
catalog = "ai_spec_catalog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_spec_catalog"]

[tool.ruff]
line-length = 88
