[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corpus-catalog"
version = "0.1.0"
description = "AI-SPEC-coupled corpus catalog CLI and context packet builder."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
catalog = "corpus_catalog.cli:main"

[tool.corpus-catalog.release]
validated-corpus-spec = "v0.19"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_catalog"]

[tool.ruff]
line-length = 88
